<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".AddCarActivity">

    <EditText
        android:id="@+id/etCarName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/hint_car_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCarYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint_car_year"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/etCarName"
        app:layout_constraintTop_toBottomOf="@+id/etCarName" />

    <EditText
        android:id="@+id/etCarColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint_car_color"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/etCarYear"
        app:layout_constraintTop_toBottomOf="@+id/etCarYear" />

    <Button
        android:id="@+id/btAddNewCar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/addBtnColor"
        android:text="@string/add_new_car"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCarColor" />
</androidx.constraintlayout.widget.ConstraintLayout>